added ghostty and waybar

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -1,13 +1,18 @@
+---
 - name: Update pacman cache
+  become: true
   pacman:
     update_cache: yes
 
 - name: Install base packages
+  become: true
   pacman:
     name:
       - git
       - htop
       - zsh
       - base-devel
+      - yay
+      - ttf-0xproto-nerd
     state: installed
 
