--- a/setup.yml
+++ b/setup.yml
@@ -8,8 +8,8 @@
     - role: zsh
       tags: [zsh]
 
-    - role: yay
-      tags: [yay]
+    - role: ghostty
+      tags: [ghostty]
 
     - role: hyprland
       tags: [hyprland]
