--- a/roles/dotfiles/tasks/main.yml
+++ b/roles/dotfiles/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
 # Clone dotfiles repository over HTTPS (no SSH key needed for public repo)
 - name: Clone dotfiles repo
-  git:
+  ansible.builtin.git:
     repo: "https://github.com/flxgde/dotfiles.git"
-    dest: "{{ ansible_env.HOME }}/dotfiles"
+    dest: "{{ ansible_env.HOME }}/.dotfiles"
     version: main
     update: yes
   become: false
@@ -17,27 +17,32 @@
     - waybar
     - wofi
 
+- name: Create .config directory
+  ansible.builtin.file:
+    path: "{{ ansible_env.HOME }}/.config"
+    state: directory
+    mode: '0755'
+
 - name: Symlink zsh config
-  import_tasks: zsh.yml
+  ansible.builtin.import_tasks: zsh.yml
   tags:
     - zsh
     - dotfiles
 
 - name: Symlink hyprland config
-  import_tasks: hyprland.yml
+  ansible.builtin.import_tasks: hyprland.yml
   tags:
     - hyprland
     - dotfiles
-#
-#- name: Symlink neovim config
-#  import_tasks: nvim.yml
-#  tags:
-#    - nvim
-#    - dotfiles
-#
+
+- name: Symlink neovim config
+  ansible.builtin.import_tasks: neovim.yml
+  tags:
+    - nvim
+    - dotfiles
 
 - name: Symlink ghostty config
-  import_tasks: ghostty.yml
+  ansible.builtin.import_tasks: ghostty.yml
   tags:
     - ghostty
     - dotfiles
