--- a/roles/dotfiles/tasks/zsh.yml
+++ b/roles/dotfiles/tasks/zsh.yml
@@ -1,6 +1,6 @@
 ---
 - name: Symlink .zshrc
-  file:
+  ansible.builtin.file:
     src: "{{ ansible_env.HOME }}/dotfiles/.zshrc"
     dest: "{{ ansible_env.HOME }}/.zshrc"
     state: link
