--- a/roles/dotfiles/tasks/neovim.yml
+++ b/roles/dotfiles/tasks/neovim.yml
@@ -1,4 +1,10 @@
 ---
+- name: Remove existing neovim config folder
+  become: false
+  ansible.builtin.file:
+    path: "{{ ansible_env.HOME }}/.config/nvim"
+    state: absent
+
 - name: Link neovim config
   ansible.builtin.file:
     src: "{{ ansible_env.HOME }}/dotfiles/.config/nvim"
