--- a/roles/tmux/tasks/main.yml
+++ b/roles/tmux/tasks/main.yml
@@ -1,9 +1,16 @@
 ---
-- name: Install tmux
+- name: Install tmux (Arch Linux)
   become: true
   community.general.pacman:
     name: tmux
     state: present
+  when: ansible_facts['os_family'] == "Archlinux"
+
+- name: Install tmux (macOS)
+  community.general.homebrew:
+    name: tmux
+    state: present
+  when: ansible_facts['os_family'] == "Darwin"
 
 - name: Remove existing tmux config folder
   ansible.builtin.file:
