--- a/roles/dotfiles/tasks/local-bin.yml
+++ b/roles/dotfiles/tasks/local-bin.yml
@@ -1,20 +1,20 @@
 ---
 - name: Create .local/bin directory
   ansible.builtin.file:
-    path: "{{ ansible_env.HOME }}/.local/bin"
+    path: "{{ ansible_facts['env']['HOME'] }}/.local/bin"
     state: directory
     mode: '0755'
 
 - name: Symlink tmux-sessionizer
   ansible.builtin.file:
-    src: "{{ ansible_env.HOME }}/dotfiles/.local/bin/tmux-sessionizer"
-    dest: "{{ ansible_env.HOME }}/.local/bin/tmux-sessionizer"
+    src: "{{ ansible_facts['env']['HOME'] }}/dotfiles/.local/bin/tmux-sessionizer"
+    dest: "{{ ansible_facts['env']['HOME'] }}/.local/bin/tmux-sessionizer"
     state: link
     force: yes
 
 - name: Symlink tmux-switch-session
   ansible.builtin.file:
-    src: "{{ ansible_env.HOME }}/dotfiles/.local/bin/tmux-switch-session"
-    dest: "{{ ansible_env.HOME }}/.local/bin/tmux-switch-session"
+    src: "{{ ansible_facts['env']['HOME'] }}/dotfiles/.local/bin/tmux-switch-session"
+    dest: "{{ ansible_facts['env']['HOME'] }}/.local/bin/tmux-switch-session"
     state: link
     force: yes
