--- a/roles/dotfiles/tasks/ghostty.yml
+++ b/roles/dotfiles/tasks/ghostty.yml
@@ -1,15 +1,15 @@
 ---
 - name: Remove existing Ghostty config folder
   ansible.builtin.file:
-    path: "{{ ansible_env.HOME }}/.config/ghostty"
+    path: "{{ ansible_facts['env']['HOME'] }}/.config/ghostty"
     state: absent
   become: false
 
 - name: Symlink ghostty
   become: false
   ansible.builtin.file:
-    src: "{{ ansible_env.HOME }}/dotfiles/.config/ghostty"
-    dest: "{{ ansible_env.HOME }}/.config/ghostty"
+    src: "{{ ansible_facts['env']['HOME'] }}/dotfiles/.config/ghostty"
+    dest: "{{ ansible_facts['env']['HOME'] }}/.config/ghostty"
     state: link
     force: yes
 
