--- a/roles/dotfiles/tasks/neovim.yml
+++ b/roles/dotfiles/tasks/neovim.yml
@@ -2,12 +2,12 @@
 - name: Remove existing neovim config folder
   become: false
   ansible.builtin.file:
-    path: "{{ ansible_env.HOME }}/.config/nvim"
+    path: "{{ ansible_facts['env']['HOME'] }}/.config/nvim"
     state: absent
 
 - name: Link neovim config
   ansible.builtin.file:
-    src: "{{ ansible_env.HOME }}/dotfiles/.config/nvim"
-    dest: "{{ ansible_env.HOME }}/.config/nvim"
+    src: "{{ ansible_facts['env']['HOME'] }}/dotfiles/.config/nvim"
+    dest: "{{ ansible_facts['env']['HOME'] }}/.config/nvim"
     state: link
     force: yes
