--- a/roles/zsh/tasks/main.yml
+++ b/roles/zsh/tasks/main.yml
@@ -1,27 +1,16 @@
 ---
-- name: Ensure Zsh is installed
-  become: true
-  community.general.pacman:
-    name: zsh
-    state: present
-
-- name: Check if Oh My Zsh is installed
-  ansible.builtin.stat:
-    path: "{{ ansible_env.HOME }}/.oh-my-zsh"
-  register: ohmyzsh_check
-
 - name: Install Oh My Zsh
   become: false
   ansible.builtin.shell: |
     sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" "" --unattended
   args:
-    creates: "{{ ansible_env.HOME }}/.oh-my-zsh"
-  when: not ohmyzsh_check.stat.exists
+    creates: "{{ ansible_facts['env']['HOME'] }}/.oh-my-zsh"
 
 - name: Install Zsh plugins
+  become: false
   ansible.builtin.git:
     repo: "{{ item.repo }}"
-    dest: "{{ ansible_env.HOME }}/.oh-my-zsh/custom/plugins/{{ item.name }}"
+    dest: "{{ ansible_facts['env']['HOME'] }}/.oh-my-zsh/custom/plugins/{{ item.name }}"
     update: yes
   loop: "{{ zsh_plugins }}"
 
@@ -34,6 +23,6 @@
 - name: Change default shell to zsh
   become: true
   ansible.builtin.user:
-    name: "{{ ansible_user }}"
+    name: "{{ ansible_facts['user_id'] }}"
     shell: /usr/bin/zsh
 
