--- a/roles/dotfiles/tasks/main.yml
+++ b/roles/dotfiles/tasks/main.yml
@@ -12,6 +12,7 @@
     - hyprland
     - nvim
     - ghostty
+    - starship
 
 - name: Create .config directory
   ansible.builtin.file:
@@ -45,6 +46,12 @@
     - dotfiles
   tags:
     - ghostty
+    - dotfiles
+
+- name: Symlink starship config
+  ansible.builtin.import_tasks: starship.yml
+  tags:
+    - starship
     - dotfiles
 
 - name: Symlink executables
