--- a/roles/dotfiles/tasks/local-bin.yml
+++ b/roles/dotfiles/tasks/local-bin.yml
@@ -18,3 +18,17 @@
     dest: "{{ ansible_facts['env']['HOME'] }}/.local/bin/tmux-switch-session"
     state: link
     force: yes
+
+- name: Symlink detect-system-theme
+  ansible.builtin.file:
+    src: "{{ ansible_facts['env']['HOME'] }}/dotfiles/.local/bin/detect-system-theme"
+    dest: "{{ ansible_facts['env']['HOME'] }}/.local/bin/detect-system-theme"
+    state: link
+    force: yes
+
+- name: Symlink sync-theme
+  ansible.builtin.file:
+    src: "{{ ansible_facts['env']['HOME'] }}/dotfiles/.local/bin/sync-theme"
+    dest: "{{ ansible_facts['env']['HOME'] }}/.local/bin/sync-theme"
+    state: link
+    force: yes
