--- a/roles/tmux/tasks/main.yml
+++ b/roles/tmux/tasks/main.yml
@@ -12,16 +12,34 @@
     state: present
   when: ansible_facts['os_family'] == "Darwin"
 
-- name: Remove existing tmux config folder
+- name: Remove existing tmux config (file or directory)
   ansible.builtin.file:
     path: "{{ ansible_facts['env']['HOME'] }}/.config/tmux"
     state: absent
   become: false
 
-- name: Symlink tmux
+- name: Create symlink to dotfiles tmux config
   become: false
   ansible.builtin.file:
     src: "{{ ansible_facts['env']['HOME'] }}/dotfiles/.config/tmux"
     dest: "{{ ansible_facts['env']['HOME'] }}/.config/tmux"
     state: link
-    force: yes
+
+- name: Create tmux plugins directory
+  become: false
+  ansible.builtin.file:
+    path: "{{ ansible_facts['env']['HOME'] }}/.tmux/plugins"
+    state: directory
+    mode: '0755'
+
+- name: Clone tpm (Tmux Plugin Manager)
+  become: false
+  ansible.builtin.git:
+    repo: https://github.com/tmux-plugins/tpm.git
+    dest: "{{ ansible_facts['env']['HOME'] }}/.tmux/plugins/tpm"
+    update: true
+
+- name: Install tmux plugins via tpm
+  become: false
+  ansible.builtin.shell:
+    cmd: "{{ ansible_facts['env']['HOME'] }}/.tmux/plugins/tpm/bin/install_plugins"
